Bug 322626 - Spell check doesn't work for dictionaries that don't use the form language_COUNTRY
Summary: Spell check doesn't work for dictionaries that don't use the form language_CO...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 1.5
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-20 18:35 UTC by Lasse Liehu
Modified: 2013-11-11 12:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments
Patch that fixes the problem (been using it for a few days) (828 bytes, patch)
2013-07-20 18:35 UTC, Lasse Liehu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lasse Liehu 2013-07-20 18:35:13 UTC
Created attachment 81226 [details]
Patch that fixes the problem (been using it for a few days)

After the fix to bug 256896 only dictionaries that use the
language_COUNTRY form for language code work.

For example an Enchant provider for Finnish, named Voikko, uses only the language code, without the country part.

Steps to reproduce:
1. Install Voikko
2. Open a PO file so that Lokalize tries to use Finnish (fi) spell checking for the translation messages.

Actual results:
Spell check doesn't work.

Expected results:
Spell check works like it does in other KDE applications.
Comment 1 Lasse Liehu 2013-10-29 01:36:55 UTC
Nick, is this bug and fix valid (instead of, say, ugly workaround for a broken Enchant provider)?
Comment 2 Lasse Liehu 2013-11-11 12:19:19 UTC
Git commit fbacc5658522d508a450fcad0db6bee90749f356 by Lasse Liehu.
Committed on 11/11/2013 at 11:24.
Pushed by lliehu into branch 'KDE/4.12'.

Fix spell check for dictionaries without country code
FIXED-IN: 4.12

M  +5    -0    src/xlifftextedit.cpp

http://commits.kde.org/lokalize/fbacc5658522d508a450fcad0db6bee90749f356
Comment 3 Lasse Liehu 2013-11-11 12:21:20 UTC
Git commit 256231fa0dc5fb75c77f0965a98f736b55be240f by Lasse Liehu.
Committed on 11/11/2013 at 11:24.
Pushed by lliehu into branch 'master'.

Fix spell check for dictionaries without country code
FIXED-IN: 4.12

M  +5    -0    src/xlifftextedit.cpp

http://commits.kde.org/lokalize/256231fa0dc5fb75c77f0965a98f736b55be240f