Fix spell check for dictionaries without country code

BUG: 322626
FIXED-IN: 4.12